// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endMeeting generates a meeting summary and sets sort order 1`] = `
Object {
  "agendaItem": Array [
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 3,
      "id": 0,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 2,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
  ],
  "meeting": Object {
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T06:59:50.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 15,
    "id": 14,
    "invitees": Array [
      Object {
        "id": 16,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 15,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 17,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 18,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "tasks": Array [
          Object {
            "assigneeId": 8,
            "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "id": 20,
            "status": "active",
            "tags": Array [],
          },
        ],
      },
      Object {
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "tasks": Array [
          Object {
            "assigneeId": 7,
            "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "id": 21,
            "status": "active",
            "tags": Array [],
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "successExpression": "Great job",
    "successStatement": "Iteration is key!",
    "summarySentAt": 2017-01-01T08:00:00.000Z,
    "tasks": Array [
      Object {
        "assigneeId": 7,
        "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "id": 21,
        "status": "active",
        "tags": Array [],
      },
      Object {
        "assigneeId": 8,
        "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "id": 20,
        "status": "active",
        "tags": Array [],
      },
    ],
    "teamId": 6,
    "teamName": "Team America",
  },
  "task": Array [
    Object {
      "agendaId": 2,
      "assigneeId": 9,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 10,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 5,
    },
    Object {
      "agendaId": 1,
      "assigneeId": 8,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 11,
      "sortOrder": 2,
      "status": "active",
      "tags": Array [],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 4,
    },
    Object {
      "agendaId": 0,
      "assigneeId": 7,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 3,
      "id": 12,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 3,
    },
    Object {
      "agendaId": 0,
      "assigneeId": 7,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.996Z,
      "createdBy": 3,
      "id": 13,
      "sortOrder": 1,
      "status": "active",
      "tags": Array [],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.997Z,
      "userId": 3,
    },
  ],
  "team": Object {
    "activeFacilitator": null,
    "checkInGreeting": Object {
      "content": "Hallo",
      "language": "German",
    },
    "checkInQuestion": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"What are you grateful for today, and why?\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 22,
    "tier": "personal",
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 23,
      "email": "natasha.romanova@avengers.org",
      "id": 16,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 31,
    },
    Object {
      "checkInOrder": 24,
      "email": "steve.rogers@avengers.org",
      "id": 15,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 32,
    },
    Object {
      "checkInOrder": 25,
      "email": "bruce.banner@avengers.org",
      "id": 17,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 33,
    },
    Object {
      "checkInOrder": 26,
      "email": "tony.stark@avengers.org",
      "id": 18,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 34,
    },
    Object {
      "checkInOrder": 27,
      "email": "kyle.richmond@avengers.org",
      "id": 19,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 35,
    },
    Object {
      "checkInOrder": 28,
      "email": "thor@avengers.org",
      "id": 9,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 5,
    },
    Object {
      "checkInOrder": 29,
      "email": "vision@avengers.org",
      "id": 8,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 30,
      "email": "james.rhodes@avengers.org",
      "id": 7,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 3,
    },
  ],
}
`;

exports[`endMeeting generates a meeting summary and sets sort order with pre-existing actions and tasks 1`] = `
Object {
  "agendaItem": Array [
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 0,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Agenda Item[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 5,
      "id": 2,
      "isActive": false,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
  ],
  "meeting": Object {
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T06:59:50.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 16,
    "id": 15,
    "invitees": Array [
      Object {
        "id": 17,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 16,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 18,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 20,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "tasks": Array [],
      },
      Object {
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "tasks": Array [
          Object {
            "assigneeId": 7,
            "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "id": 21,
            "status": "active",
            "tags": Array [],
          },
        ],
      },
      Object {
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "tasks": Array [
          Object {
            "assigneeId": 8,
            "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "id": 22,
            "status": "active",
            "tags": Array [],
          },
        ],
      },
      Object {
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "tasks": Array [
          Object {
            "assigneeId": 9,
            "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
            "id": 23,
            "status": "active",
            "tags": Array [],
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "successExpression": "Great job",
    "successStatement": "Iteration is key!",
    "summarySentAt": 2017-01-01T08:00:00.000Z,
    "tasks": Array [
      Object {
        "assigneeId": 9,
        "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "id": 23,
        "status": "active",
        "tags": Array [],
      },
      Object {
        "assigneeId": 8,
        "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "id": 22,
        "status": "active",
        "tags": Array [],
      },
      Object {
        "assigneeId": 7,
        "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
        "id": 21,
        "status": "active",
        "tags": Array [],
      },
    ],
    "teamId": 6,
    "teamName": "Team America",
  },
  "task": Array [
    Object {
      "assigneeId": 7,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[0]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 10,
      "sortOrder": 3,
      "status": "active",
      "tags": Array [],
      "teamId": 6,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 3,
    },
    Object {
      "agendaId": 0,
      "assigneeId": 7,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[1]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 3,
      "id": 11,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 3,
    },
    Object {
      "agendaId": 1,
      "assigneeId": 8,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[2]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 4,
      "id": 12,
      "sortOrder": 2,
      "status": "active",
      "tags": Array [],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 4,
    },
    Object {
      "agendaId": 2,
      "assigneeId": 9,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[3]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.996Z,
      "createdBy": 5,
      "id": 13,
      "status": "active",
      "tags": Array [
        "private",
      ],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.997Z,
      "userId": 5,
    },
    Object {
      "agendaId": 2,
      "assigneeId": 9,
      "content": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"Test Task[4]\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
      "createdAt": 2017-01-01T06:59:59.995Z,
      "createdBy": 5,
      "id": 14,
      "sortOrder": 1,
      "status": "active",
      "tags": Array [],
      "teamId": 6,
      "updatedAt": 2017-01-01T06:59:59.996Z,
      "userId": 5,
    },
  ],
  "team": Object {
    "activeFacilitator": null,
    "checkInGreeting": Object {
      "content": "Hallo",
      "language": "German",
    },
    "checkInQuestion": "{\\"blocks\\":[{\\"key\\":0,\\"text\\":\\"What are you grateful for today, and why?\\",\\"type\\":\\"unstyled\\",\\"depth\\":0,\\"inlineStyleRanges\\":[],\\"entityRanges\\":[],\\"data\\":{}}],\\"entityMap\\":{}}",
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 24,
    "tier": "personal",
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 25,
      "email": "natasha.romanova@avengers.org",
      "id": 17,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 33,
    },
    Object {
      "checkInOrder": 26,
      "email": "steve.rogers@avengers.org",
      "id": 16,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 34,
    },
    Object {
      "checkInOrder": 27,
      "email": "bruce.banner@avengers.org",
      "id": 18,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 35,
    },
    Object {
      "checkInOrder": 28,
      "email": "tony.stark@avengers.org",
      "id": 19,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 36,
    },
    Object {
      "checkInOrder": 29,
      "email": "kyle.richmond@avengers.org",
      "id": 20,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 37,
    },
    Object {
      "checkInOrder": 30,
      "email": "thor@avengers.org",
      "id": 7,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 3,
    },
    Object {
      "checkInOrder": 31,
      "email": "vision@avengers.org",
      "id": 8,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 32,
      "email": "james.rhodes@avengers.org",
      "id": 9,
      "isCheckedIn": null,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 5,
    },
  ],
}
`;
